--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -286,7 +286,7 @@
  Limited_Universal_Suffrage: "Limited Universal Suffrage"
  Limited_Universal_Suffrage_desc: "China goverment has agreed to allow the Chief Executive of Hong Kong to be elected by universal suffrage, on the condition that candidates must be vetted by China goverment first. This is widely seen as a move to reduce the likelihood of pan-democrat or localist candidates becoming Chief Executive."
  Universal_Suffrage: "Universal Suffrage"
- Universal_Suffrage_desc: "China boverment has finally agreed to permit Hong Kong to elect its Chief Executive by way of universal suffrage without interference by the mainland authorities."
+ Universal_Suffrage_desc: "China goverment has finally agreed to permit Hong Kong to elect its Chief Executive by way of universal suffrage without interference by the mainland authorities."
  Hong_Kong_Protests: "Hong Kong Protests"
  Hong_Kong_Protests_desc: "Following recent actions by the Chinese government, widespread protests have broken out in Hong Kong demanding a reversal of the Chinese move."
  asian_crisis_HKG_desc: "The economic crisis that gripped developing East and Southeast Asia threw decades of growth down the drain. The Loss of confidence in the national currencies still plagues the central banks to this day. Public and private debt has also skyrocketed.\n\nPainful lessons were learned, past unwanted economic reforms are in full swing. Each country were hit differently and each have their own solutions.\n\nThe influx of investments to the affected countries were once half of the total sum in the world, but now those goes to [CHI.GetFlag]China and elsewhere."
