SOV leader and CZE ics

--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -4285,10 +4285,13 @@
  sov_oligarchs.2.a: "Welcome back!"
  sov_oligarchs.3.t: "Berezovskiy returns to Russia!"
  sov_oligarchs.3.d: "Russia's most famous and rich oligarch, Boris Berezovskiy returns to Russia!"
- sov_oligarchs.3.a: "Based!"
+ sov_oligarchs.3.a: "Like in 90's!"
  sov_oligarchs.4.t: "Semibankirshina takes power in Russia!"
- sov_oligarchs.4.d: "Russia's most influencive oligarch group suspended other members of the council."
- sov_oligarchs.4.a: "Based."
+ sov_oligarchs.4.d: "Internal strife within the interim government resulted in seven formerly very powerful Yeltsin oligarchs being able to remove all their rivals and take power. Now, within the Semibankirshina, it is being decided how the public authorities will be formed and who will take over the leadership positions. However, the most important question is who will take the presidency?"
+ sov_oligarchs.4.a: "Direct rule of the Council!"
+ sov_oligarchs.4.b: "We will install a figurehead President."
+ sov_oligarchs.4.c: "Boris Berezovsky will be the President."
+ sov_oligarchs.4.a: "Mikhail Khodorkovsky will be the President."
  ##Oligarch Dynamic Modifier
  SOV_russian_oligarchs_modifier: "Oligarchic State"
  SOV_russian_oligarchs_tt_intro: "Modify §Y$SOV_russian_oligarchs_modifier$§! by"
