--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -4291,7 +4291,7 @@
  sov_oligarchs.4.a: "Direct rule of the Council!"
  sov_oligarchs.4.b: "We will install a figurehead President."
  sov_oligarchs.4.c: "Boris Berezovsky will be the President."
- sov_oligarchs.4.a: "Mikhail Khodorkovsky will be the President."
+ sov_oligarchs.4.e: "Mikhail Khodorkovsky will be the President."
  ##Oligarch Dynamic Modifier
  SOV_russian_oligarchs_modifier: "Oligarchic State"
  SOV_russian_oligarchs_tt_intro: "Modify §Y$SOV_russian_oligarchs_modifier$§! by"
