--- a/Changelog.txt
+++ b/Changelog.txt
@@ -110,6 +110,7 @@ v1.10.0
  Graphics:
  - Added the "Toofan MRAP" for Iran
  - Replaced the unit model for Russia
+ - SOV Political Rework ( Reworked parties and leaders for SOV. New parties for Russia's breakaway tags and dynamic parties for potential Federal Subjects of Russia. )
  - Added M60 Tank Model for Turkey (Geo Integration)
  - Added Armenian BMP2 Model (Geo Integration)
  - Shrunk the size of some models
