EU GUI multi-language support

--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -2767,7 +2767,6 @@
  eu_foreign_affairs_security_tip: "[!foreign_affairs_security_back_click_enabled]"
  eu_central_bank_president_tip: "[!eu_central_bank_president_back_click_enabled]"
  eu_frontex_director_tip: "[!eu_frontex_director_back_click_enabled]"
- eu_ambassador_to_eu_tip: "[!eu_ambassador_to_eu_back_click_enabled]"
  eu_pres_federation_tip: "[!eu_pres_federation_back_click_enabled]"
  EU_run_omt_program_tip: "§Y所需条件：§!\n[!EU_run_omt_program_click_enabled]\n"
  eu_adjust_omt_program_tip: "§Y所需条件：§!\n[!EU_adjust_omt_program_click_enabled]\n"
@@ -2788,7 +2787,7 @@
  EU_frontex_director_tt: "§Y欧盟边防局局长§!主管欧洲边境和海岸警卫队机构。边防局的目的是在当地支持欧盟成员国保护欧洲外部边界的努力。它还对申根区实施边境管制，以协助自由、安全和司法领域。\n\n§Y职位福利：§!\n\n担任该职位将允许其持有者在任期内暂时控制欧盟边防局部队。\n\n[!eu_frontex_director_back_click]\n"
  EU_sec_general_euro_army_tt: "§Y欧洲陆军秘书长§!是欧盟欧洲军队的负责人。他们负责欧盟军队的协调，欧盟军队是欧盟成员国的联合和共同武装部队。\n\n§Y职位福利：§!\n\n担任这一职位将允许其持有者在任期内暂时控制欧盟陆军。\n[!eu_sec_general_euro_army_back_click]\n"
  EU_sec_general_euro_navy_tt: "§Y欧盟海军秘书长§!是欧盟欧洲海军的负责人。他们负责欧盟海军的协调，欧盟海军是欧盟联合和共同的海军力量。\n\n§Y职位福利：§!\n\n担任这一职位将允许持有人控制成员国海军并将其统一为一支欧盟舰队。\n[!eu_sec_general_euro_navy_back_click]\n"
- EU_ambassador_to_un_tt: "§Y欧盟驻联合国大使§!在联合国代表欧盟，与所有欧盟成员国的外交使团协调工作。\n\n§Y职位福利：§!\n担任这一职务将授予其所在国家联合国安理会国家精神常任理事国资格。\n\n[!eu_ambassador_to_eu_back_click]\n"
+ EU_ambassador_to_un_tt: "§Y欧盟驻联合国大使§!在联合国代表欧盟，与所有欧盟成员国的外交使团协调工作。\n\n§Y职位福利：§!\n担任这一职务将授予其所在国家联合国安理会国家精神常任理事国资格。\n\n[!eu_ambassador_to_un_back_click]\n"
  EU_president_of_the_eurofederation_tt: "§Y欧洲联邦主席§! 是正式选举产生的欧洲联盟领导人。欧洲联邦是欧盟最后的联邦化选择之一，因此这使其成为一个非常强大的地位。\n\n§Y职位福利：§!\n\n[!eu_pres_federation_back_click]\n"
  gdp_total_of_the_eu_tt: "[EUU.GetFlag]总GDP: [?global.EU_gdp|Y0]B"
  gdp_total_of_the_eu_tt_delayed: "[EUU.GetNameWithFlag]总人口：[?global.var_EUpopTotalDisplay|Y]§YM§!\n[EUU.GetNameWithFlag]GDP/C：[?global.EU_gdp_capita|Y3]k\n"
@@ -3096,3 +3095,14 @@
  EU_support: "支持"
  EU_reject: "否决"
  EU_country_rate_text: "[THIS.GetNameWithFlag]利率"
+ eu_ambassador_to_un_tip: "[!eu_ambassador_to_un_back_click_enabled]"
+ eu_president_council_text: "欧盟理事会主席"
+ eu_president_commission_text: "欧盟委员会主席"
+ eu_central_bank_president_text: "欧盟中央银行行长"
+ foreign_affairs_security_text: "外交与安全政策高级代表"
+ eu_parliament_president_text: "欧盟议会主席"
+ eu_minister_economy_finance_text: "欧盟经济和财政部长"
+ eu_frontex_director_text: "欧盟边防局局长"
+ eu_sec_general_euro_army_text: "欧盟陆军秘书长"
+ eu_sec_general_euro_navy_text: "欧盟海军秘书长"
+ eu_ambassador_to_un_text: "欧盟驻联合国大使"
