EU GUI small fix

--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -3106,3 +3106,5 @@
  eu_sec_general_euro_army_text: "欧盟陆军秘书长"
  eu_sec_general_euro_navy_text: "欧盟海军秘书长"
  eu_ambassador_to_un_text: "欧盟驻联合国大使"
+ euro_army: "欧盟陆军"
+ euro_navy: "欧盟海军"
