--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -1191,6 +1191,10 @@
  EUU_subsidies_suspended: "Suspension of EU Subsidies"
  EUU_subsidies_suspended_desc: "The European Union subsidies we were once receiving have now been suspended. The sudden change in our budget will take some getting used to and we should look to remedying the situation to once again take advantage of the subsidies allotted to us."
 
+ ### Global flag ###
+ euro_army: "Euro Army"
+ euro_navy: "Euro Navy"
+ 
  ### Claim Office Category ###
  EU_office_category: "Offices of the European Union"
  EU_office_category_desc: "[EUU.GetFlag] The European Union's major offices:\n\n[EU_commission_president_Loc][EU_council_president_Loc][EU_foreign_minister_Loc][EU_parliament_president_Loc][ECB_president_Loc][EU_finance_minister_Loc][frontex_ExDir_Loc][EuroArmy_SC_Loc][EuroNavy_SC_Loc][EU_ambassador_UNSC_Loc][EU_president_Loc]\n\n[POTEF_polls_loc]"
