units, events and a new focus of NSL

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -351,6 +351,10 @@
  hongkong.9.d: "Hong Kong Police requires Norinco to purchase some infantry weapons and other equitments today. Should we sell them the weapons?"
  hongkong.9.a: "We have no reason to reject. Agree it!"
  hongkong.9.b: "Sorry but we are also lacking of weapons."
+ hongkong_news.4.t: "123 Democratic Alliance is disbanded today."
+ hongkong_news.4.d: "Established in 1994 by a group of pro-Taiwan, pro-democracy and pro-business politicians, the 123 Democratic Alliance was dissolved because lacking of financial support from the Taiwan government, after the Kuomintang's defeat in its presidential election."
+ hongkong_news.4.a: "A good news, isn't it?"
+ hongkong_news.4.b: "Well...Got it."
  #Opinion Modifier
  HKG_european_bussiness_opinion: "Improve Trade with European Bussinessmen"
  HKG_chinese_entrepreneurs_opinion: "Improve Trade with Our Mainland Entrepreneurs"
