--- a/Changelog.txt
+++ b/Changelog.txt
@@ -50,11 +50,12 @@ v1.10.0
 
  Content:
   - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
-  - NEW REWORKED TREE: Donetsk PR, Transnistria, Lugansk PR, Belarus
+  - NEW REWORKED TREE: Donetsk PR, Transnistria, Lugansk PR, Belarus, Denmark
   - The Union state of Russia and Belarus gives more national spirits during the annexation
   - Some decisions have been removed from the mechanics of the Russian subjects
   - Add Ryukyu to the game
   - Add Vojvodina to the game
+  - Add Cabinda to the game
   - Remove TFV DOD WTT DLC Conditions due to PDS change
   - Improved the content of the European Union and her laws
   - Removed the Majority/Unanimity voting law types
