--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -1122,3 +1122,5 @@
  cuba_news.62.t: "Cuba amnesties several thousand prisoners"
  cuba_news.62.d: "The Cuban Government announced the release of 2,900 prisoners, many of whom had been convicted of "Offences against State security". Such steps from the Cuban government have almost never been taken."
  cuba_news.62.a: "Interesting"
+
+CUB_MILLENNIUM_DAWN_DESC: "On the beautiful island of Cuba, where the sun warms the palm trees and the sea breeze gently embraces the shores, the year 2000 saw an atmosphere of change. In the heart of the Caribbean, on this oasis of warmth and beauty, lived a history rich in tradition and cultural heritage. However, in the shadows of this rich beauty, the heated struggle of political forces continued its stirring moves. The political situation in the country was tense, reflecting perpetual power struggles and ideological struggles. Despite this, the spirit of the people of Cuba remained indestructible, their hearts filled with hope for a bright future and faith in justice."
