--- a/localisation/english/MD_focus_BUL_l_english.yml
+++ b/localisation/english/MD_focus_BUL_l_english.yml
@@ -448,8 +448,6 @@
  bulg.10.a: "Crush the Nationalist Scum!"
  bulg.10.b: "Better Dead than Red!"
 
- BUL_MILLENNIUM_DAWN_DESC: "Bulgaria, which went through the Second World War and became a socialist republic, has only recently been formed into a democratic state. The new millennium shines for Bulgaria with new challenges facing a new, growing democracy in the Balkans... Only time will show, what will Bulgaria achieve in the new, perhaps brighter century."
-
  bul_mech.7.t: "Pro-Bulgarian Propaganda Campaign in Macedonia"
  bul_mech.7.d: "Bulgaria launched a propaganda campaign in Macedonia to persuade the country to join forces with their southern neighbor. The campaign included billboards and advertisements that called on Macedonians to "unite with the Bulgarian brothers" and claimed that the two nations shared a common history and culture. However, many Macedonians saw the campaign as an attempt at cultural assimilation and rejected the notion of joining Bulgaria. Nationalists in Macedonia accused Bulgaria of attempting to erase their identity and language and vowed to resist the propaganda campaign.."
  bul_mech.7.a: "Interesting"
@@ -530,7 +528,7 @@
  BUL_rebellion_category: "Macedonian Crisis"
  BUL_rebellion_category_desc: "\n\n\n\n\n\n\n\n\n\n\n\nThe Bulgarian-Macedonian border dispute is a long-standing issue that dates back to the dissolution of Yugoslavia in the early 1990s. The two nations have been unable to agree on a precise demarcation of their borders due to historical and political reasons. Bulgaria claims that parts of the Republic of North Macedonia's national identity and language have been artificially constructed in a bid to strengthen its own territorial claim. However, North Macedonia has consistently denied this, stating that such allegations are baseless and unfounded. In recent times, both nations have shown a willingness to negotiate and work towards a resolution. The European Union has also played a significant role in mediating and facilitating talks between the two sides. A resolution of this dispute would be crucial to furthering regional cooperation and reducing tensions among the Balkan states. Macedonia could lose it's sovereignty because of this conflict..."
 
- FYR_BUL_tensions_tt:0 "Tension will change by: $RIGHT|=-$"
+ FYR_BUL_tensions_tt: "Tension will change by: $RIGHT|=-$"
 
  FYR_government_opinion_tt:0 "Macedonian Government's Opinion will change by: $RIGHT|=+$"
 
