--- a/localisation/english/MD_focus_SPR_l_english.yml
+++ b/localisation/english/MD_focus_SPR_l_english.yml
@@ -1585,7 +1585,7 @@ l_english:
  SPR_spawn_new_guardia_real_decision: "Expand Guardia Real"
  SPR_spawn_new_guardia_real_decision_desc: "Training additional Guardia Real units will become more beneficial."
  SPR_a_just_tax_decision: "A Just Tax"
- SPR_a_just_tax_decision_desc: "The throne requires additional funds to better govern our nation for the time being. Althoug this is temporary it is something the people may find unfair. However, this is a just and divine tax.\n"
+ SPR_a_just_tax_decision_desc: "The throne requires additional funds to better govern our nation for the time being. Although this is temporary it is something the people may find unfair. However, this is a just and divine tax.\n"
  SPR_a_divine_right_decision: "A Divine Right"
  SPR_a_divine_right_decision_desc: "The crown has been bestowed on the Spanish people as a gift from God. We have a divine right to rule and as such as we should show the people our divinity."
  SPR_install_the_carlists_decision: "Install the Carlist Monarchy"
