--- a/localisation/simp_chinese/MD_focus_ARM_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ARM_l_simp_chinese.yml
@@ -1766,7 +1766,7 @@
  arm_elect.2.a: "共和党在1998年和2003年的选举中支持我。选择是显而易见的。"
  arm_elect.2.b: "科泰克是察鲁基扬的家乡省份。他一定会非常小心地照顾它。"
  arm_elect.2.c: "民族主义者确实想解决该省的问题。我们应该给他们一个机会。"
- arm_elect.3.t: "议会。。。什么？"
+ arm_elect.3.t: "议会…什么？"
  arm_elect.3.d: "在最近的议会选举中，共和党通过提前操纵选票的方式要求获得更多席位，想要从察鲁基扬的政党手中夺走这些席位，尽管这些席位原本是为民族主义联盟准备的。我们应该把这些座位给谁？"
  arm_elect.3.a: "显然，萨尔基相的门生应该坐在那里。"
  arm_elect.3.b: "察鲁基扬的门生应该坐在那里。"
