--- a/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
@@ -185,7 +185,7 @@
  cuba.45: "美国拒绝"
  cuba.45.t: "美国拒绝"
  cuba.45.d: "封锁继续"
- cuba.45.a: "啊。。。"
+ cuba.45.a: "啊…"
  cuba.46: "古巴寻求保护"
  cuba.46.t: "古巴寻求保护"
  cuba.46.d: "古巴要求安全保障，并要求在其领土上部署我们的士兵。"
@@ -198,7 +198,7 @@
  cuba.48: "美国不会保护我们"
  cuba.48.t: "美国不会保护我们"
  cuba.48.d: "我们的自由岌岌可危"
- cuba.48.a: "哈。。。"
+ cuba.48.a: "哈…"
  cuba.49: "民主党派已达成协议"
  cuba.49.t: "民主党派已达成协议"
  cuba.49.d: "最后，经过长时间的辩论，古巴各民主党派代表宣布了近期签署的最重要的协议。抛开个人利益，国家利益至上，自由岛各民主党派将团结成一个共同的联盟。这是古巴国家历史上最重要的事件。"
