--- a/localisation/simp_chinese/MD_focus_EGY_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EGY_l_simp_chinese.yml
@@ -101,7 +101,7 @@
  Egypt.16.a: "有趣"
  EGY_squash_diplo: "壁球外交"
  EGY_squash_diplo_desc: "穆巴拉克和美国总统的私人关系是我们对外关系的一个重要因素。我们需要利用它来发挥我们的优势。"
- Egypt.17.t: "利用我们的人脉。。。"
+ Egypt.17.t: "利用我们的人脉…"
  Egypt.17.d: "我们机构最近决定从邻国招募更多人员。我们应该关注哪个国家？"
  Egypt.17.a: "以色列"
  Egypt.17.b: "利比亚"
@@ -1276,7 +1276,6 @@
  EGY_FRA_agree_to_sell_tt: "我们同意支付$8B以建造§Y1艘航母§!"
  LoAS_member_upd: "阿拉伯联盟成员"
  LoAS_member_upd_desc: "阿拉伯联盟，正式名称为阿拉伯国家联盟，是一个由阿拉伯国家组成的地区性组织。该组织的目的是加强成员国之间的关系，协调他们之间的合作。"
- EGY_MILLENNIUM_DAWN_DESC: "2000年，埃及政治局势由总统穆巴拉克的铁腕统治所主宰，其特征是专制控制、政治自由受限和偶尔的改革试验。虽然经济有所增长，但国家仍然深陷贫困、腐败和社会不平等的困境。政府对异见者进行残酷镇压，但反对和变革的声音仍然存在，特别是在青年和社会团体中。然而，埃及政治的前景仍然充满不确定性，继承人、社会经济矛盾和先进技术的潜在作用都给国家的政治局势带来了变数。"
  EGY_nato_standards_military_idea: "北约标准"
  tur_syr_ben_tt: "§Y如果谈判成功，我们将获得政治利益。§!"
  copts_revolted: "科普特人起义了！"
