--- a/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
@@ -481,8 +481,8 @@
  GER_Establish_Marinekommando_Rostock_desc: "海军司令部是德国海军的最高权力机构，负责海军部队的领导、专业知识和训练。它位于罗斯托克，由海军督察和他的副手舰队司令指挥。海军陆战队负责制定海军的概念、训练、组织和物资规划。"
  GER_Special_Marine_Forces: "海军特种部队"
  GER_Special_Marine_Forces_desc: "海军特种部队（SEK M）是驻扎在埃肯弗德的德国海军的一个营级步兵部队。他们负责海军的步兵部分，由海军的特种部队组成，包括蛙人、水雷潜水员和登船队。"
- GER_Center_of_Excellence_for_Operations_in_Conined_and_shallow_Waters: "限制和浅水区作战卓越中心"
- GER_Center_of_Excellence_for_Operations_in_Conined_and_shallow_Waters_desc: "限制和浅水区作战卓越中心是北约位于基尔的研究机构。其任务是为北约和参加限制和浅水区作战的国家提供在密闭和浅水区行动范围方面的联合和综合主题专业知识，以推进未来的发展，特别是支持北约的转型。"
+ GER_Center_of_Excellence_for_Operations_in_Conined_and_shallow_Waters: "受限和浅水区作战卓越中心"
+ GER_Center_of_Excellence_for_Operations_in_Conined_and_shallow_Waters_desc: "受限和浅水区作战卓越中心是北约位于基尔的研究机构。其任务是为北约和参加受限和浅水区作战的国家提供在密闭和浅水区行动范围方面的联合和综合主题专业知识，以推进未来的发展，特别是支持北约的转型。"
  GER_Reform_the_Marine_Training: "改革海军训练"
  GER_Reform_the_Marine_Training_desc: "我们目前的海上训练系统薄弱和过时。也许通过采用类似于美国海军的系统，可以带来更好的体验。"
  GER_Neue_Luftwaffenstruktur: "空军第5师"
@@ -1275,7 +1275,7 @@
  germany.402.a: "他们可以拥有他们需要的所有现金"
  germany.402.b: "好吧，我们会给他们一个适度的提升"
  germany.402.c: "算了，给他们一点点"
- germany.401.t: "NPD被判有罪"
+ germany.401.t: "国家民主党被判有罪"
  germany.401.d: "国家民主党被判犯有试图损害德国民主的罪行，因此对右翼政党进行了禁令。"
  germany.401.a: "太好了！"
  germany.5.t: "杜塞尔多夫炸弹袭击"
@@ -2887,7 +2887,7 @@
  germany.556.c: "提供军事训练"
  German_Institute: "德国学院"
  GER_Idea_light_Force: "专注轻装部队"
- GER_Idea_medium_Force: "专注中等装备部队"
+ GER_Idea_medium_Force: "专注中型部队"
  GER_Idea_heavy_Force: "专注重装部队"
  GER_idea_Marinekommando: "罗斯托克海军司令部"
  GER_Idea_Neuausrichtung_Marine: "德国海军的重组"
