--- a/localisation/simp_chinese/MD_focus_GRE_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GRE_l_simp_chinese.yml
@@ -38,7 +38,7 @@
  GRE_austerity_4_desc: "抵制紧缩政策的人数增多，国内局势动荡不安。目前发生暴动的几率很大"
  GRE_austerity_5: "民变"
  GRE_austerity_5_desc: "国内骚乱导致全国完全崩溃，暴力行为和动荡局势已经严重到可以称之为内战的地步。目前发生暴动几率因国家长期处于暴乱状态而不再重要。"
- GRE_drift_modifiers: "政治游离"
+ GRE_drift_modifiers: "政治思潮"
  GRE_debt_modifier: "债务危机"
  GRE_debt_modifier_desc: "债务危机的严重程度取决于我们如何管理资金，但长远的看花更多资金提供工作岗位会使我们受益。"
  GRE_immigrants_barred: "政府已暂停所有至希腊的移民行为，直到另行通知。该通知可能永远也不会公布。"
