--- a/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
@@ -4070,7 +4070,7 @@
  PER_political.9991.a: "米尔扎·克尔曼尼将成为总书记"
  PER_political.9991.b: "浩加特·卡拉什将成为总书记"
  PER_political.9991.c: "扎赫拉·古拉米普尔将成为总书记"
- PER_political.99912.t: "佩泽什克普尔去世。。。"
+ PER_political.99912.t: "佩泽什克普尔去世…"
  PER_political.99912.d: "泛伊朗主义党的领导人和创始人佩泽什普尔今天早些时候去世。他的去世引起全国人民的巨大悲痛。尽管许多人在哭泣，但也有人在问谁将领导这个国家前进......"
  PER_political.99912.a: "米尔扎·克尔曼尼"
  PER_political.99912.b: "浩加特·卡拉什"
@@ -4094,7 +4094,7 @@
  iran_md.2.a: "好"
  iran_md.3.t: "伊斯兰革命卫队攻击军事基地"
  iran_md.3.d: "一群伊斯兰革命卫队叛乱分子最近袭击了驻扎在军事基地的我们的士兵。目前，我们的军队与伊斯兰革命卫队之间存在着激烈的冲突。军事基地的军官和高层正在请求更多支持，以帮助击败叛乱分子。"
- iran_md.3.a: "这。。。不关我事"
+ iran_md.3.a: "这…不关我事"
  iran_md.3.b: "给他们所需的一切"
  iran_md.4.t: "伊斯兰革命卫队正试图控制一座城市！"
  iran_md.4.d: "今天早上，几十名伊斯兰革命卫队叛乱分子在一座较小的城市压倒了我们的安全部队，甚至暂时控制了部分城市。附近城市的安全部队开始动员前往那里，但一些人担心这可能还不够。"
