--- a/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
@@ -1440,8 +1440,8 @@
  SPR_monarchist_spain_desc: "西班牙君主制是世界上历史最悠久的君主制之一。"
  SPR_spawn_new_guardia_real_decision: "扩编皇家卫队"
  SPR_spawn_new_guardia_real_decision_desc: "训练更多的皇家卫队将变得更加有益。"
- SPR_a_just_tax_decision: "正义的税收"
- SPR_a_just_tax_decision_desc: "王座目前需要额外资金以更好地管理我们的国家。而阿尔索夫是暂时的，这可能会被人们发现是不公的。然而，这只是一种公正而神圣的税收。\n"
+ SPR_a_just_tax_decision: "正义税"
+ SPR_a_just_tax_decision_desc: "王位需要额外的资金来暂时更好地治理我们的国家。虽然这是暂时的，但人们可能会觉得不公平。然而，这是一项公正而神圣的税收。\n"
  SPR_a_divine_right_decision: "君权神授"
  SPR_a_divine_right_decision_desc: "作为上帝赐予西班牙人民的礼物，皇冠被赋予了西班牙人民。我们有神圣的统治权，因此我们应该向人民展示我们的神性。"
  SPR_install_the_carlists_decision: "建立卡洛斯君主政体"
