--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -1268,7 +1268,7 @@
  BSH_bashkiria_economic_growth_desc: "我们将批准《巴什科尔托斯坦共和国经济和投资发展国家规划》。"
  BSH_bashkiria_small_business: "小型企业发展计划"
  BSH_bashkiria_small_business_desc: "《小型企业发展方案》旨在通过建立有效的支持机制，为巴什科尔托斯坦共和国中小企业的发展创造条件，增加中小企业对解决巴什科尔托斯坦共和国经济和社会问题的贡献。"
- BSH_social_sector: "社会支出"
+ BSH_social_sector: "社会开支"
  BSH_social_sector_desc: "我们将加大对人民的社会支持。"
  BSH_CUR: "可持续发展目标"
  BSH_CUR_desc: "这个中心将帮助我们更好地管理共和国。"
@@ -1584,7 +1584,7 @@
  chechnya.17.a: "去吧，为了伊奇克里亚！"
  chechnya.18.t: "与俄国签订和平条约"
  chechnya.18.d: "这场战争让双方都疲惫不堪，也许是时候讲和了。"
- chechnya.18.a: "。。。"
+ chechnya.18.a: "…"
  chechnya.18.b: "休想"
  chechnya.19.t: "与车臣的友好协定"
  chechnya.19.d: "车臣政府建议我们忘记过去的争吵，继续签署我们两国之间的友好伙伴关系条约。"
