--- a/localisation/simp_chinese/MD_focus_UKR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_UKR_l_simp_chinese.yml
@@ -808,4 +808,4 @@
  ukraine_revolution.14.t: "明斯克协议"
  ukraine_revolution.14.d: "战争并没有给我们带来预期的结果。分裂分子还没有被消灭，人民显然对无休止的战争感到不满，也许我们应该休息一下？"
  ukraine_revolution.14.a: "现在就停战。"
- ukraine_revolution.14.b: "和平。。。为什么？"
+ ukraine_revolution.14.b: "和平…为什么？"
