--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -342,7 +342,7 @@
  anti_SAU_hack: "从沙特阿拉伯窃取机密信息"
  anti_NKO_hack: "从朝鲜窃取机密信息"
  russian_legacy: "俄罗斯传统"
- russian_legacy_desc: "\n\n£idea_SOV_russian_legacy_desc_picture\n\n\n\n几个世纪以来，俄罗斯一直在走自己的路，远离世界其他地区，很少采取措施与任何人结盟，除了自己。俄罗斯通常处于独裁统治，再加上保守的人民，改变它将是一个缓慢的过程。"
+ russian_legacy_desc: "几个世纪以来，俄罗斯一直在走自己的路，远离世界其他地区，很少采取措施与任何人结盟，除了自己。俄罗斯通常处于独裁统治，再加上保守的人民，改变它将是一个缓慢的过程。"
  SOV_idea_restalinization: "重新斯大林化"
  SOV_idea_restalinization_desc: "俄罗斯已经偏离了正确的道路。如果我们要在这个世界上生存并保持我们的独立性，我们需要回到斯大林的方式。"
  kamajors: "卡马约"
