--- a/localisation/simp_chinese/countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/countries_l_simp_chinese.yml
@@ -5346,3 +5346,18 @@
  CHI_AUTH_S: "中华人民共和国"
  CHI_AUTH_S_DEF: "中华人民共和国"
  CHI_AUTH_S_ADJ: "中国"
+ CAB_neutrality: "卡宾达"
+ CAB_neutrality_DEF: "卡宾达"
+ CAB_democratic: "卡宾达"
+ CAB_democratic_DEF: "卡宾达"
+ CAB_fascism: "卡宾达"
+ CAB_fascism_DEF: "卡宾达"
+ CAB_communism: "卡宾达"
+ CAB_communism_DEF: "卡宾达"
+ CAB_nationalist: "卡宾达"
+ CAB_nationalist_DEF: "卡宾达"
+ CAB_neutrality_ADJ: "卡宾达"
+ CAB_democratic_ADJ: "卡宾达"
+ CAB_fascism_ADJ: "卡宾达"
+ CAB_communism_ADJ: "卡宾达"
+ CAB_nationalist_ADJ: "卡宾达"
