--- a/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
@@ -10,10 +10,8 @@
  annex_mongolia_as_china_DESC: "作为中华人民共和国吞并蒙古，草原将再次属于我们。"
  control_south_sea_as_china_NAME: "中国南海"
  control_south_sea_as_china_DESC: "作为中华人民共和国控制南海的所有岛屿。九段线终将名至实归。"
- reclaim_ambazonia_NAME: "收回亚巴佐尼亚"
- reclaim_ambazonia_DESC: "从喀麦隆手中夺回亚巴佐尼亚，一个从未得到解决的后殖民主义争端。"
- take_back_eritrea_NAME: "夺回厄立特里亚"
- take_back_eritrea_DESC: "夺回我们分离的厄立特里亚。"
+ reclaim_ambazonia_NAME: "收回安巴佐尼亚"
+ reclaim_ambazonia_DESC: "从喀麦隆手中夺回安巴佐尼亚，一个从未得到解决的后殖民主义争端。"
  take_back_sahrawi_NAME: "夺回西撒哈拉"
  take_back_sahrawi_DESC: "夺回我们分离的西撒哈拉。"
  take_back_western_sahara_NAME: "收回西撒哈拉"
@@ -67,9 +65,9 @@
  armenian_banditocracy_DESC: "埃里克·伊本·马尔霍西是一位马克思主义的腐败萨拉菲斯特基督教原教旨主义者，现在统治着亚美尼亚"
  armenian_empire_redo_NAME: "亚美尼亚帝国"
  armenian_empire_redo_DESC: "亚美尼亚终于到达了它的完全边界，提格兰大帝会感到骄傲的"
- armenian_reverse_pashinyan_NAME: "UNO承认帕希尼扬"
+ armenian_reverse_pashinyan_NAME: "与现实颠倒的帕希尼扬"
  armenian_reverse_pashinyan_DESC: "与真正的对手不同，你的帕希尼扬将阿尔扎赫与亚美尼亚统一，并坚持他的爱国主义"
- armenian_zsfsr_unification_NAME: "德米尔基扬的潮湿之梦"
+ armenian_zsfsr_unification_NAME: "德米尔基扬的春梦"
  armenian_zsfsr_unification_DESC: "外高加索终于在亚美尼亚共产党的苏联模式统治下统一了，光荣属于红十月！"
  armenian_hyperborea_NAME: "瓦拉兹达特-阿玛塔普图格"
  armenian_hyperborea_DESC: "以上帝的名义，亚美尼亚恢复了真正的生活方式"
@@ -88,7 +86,7 @@
  who_was_in_paris_NAME: "谁在巴黎？"
  who_was_in_paris_DESC: "作为尼日尔控制法兰西岛"
  the_head_of_the_tigers_NAME: "领头虎"
- the_head_of_the_tigers_DESC: "为西方主义新加坡，在2004年之前附庸香港、韩国和台湾"
+ the_head_of_the_tigers_DESC: "为西方主义新加坡，在2004年之前附庸香港、澳门、韩国和台湾。"
  a_new_singaporean_empire_NAME: "新的新加坡帝国"
  a_new_singaporean_empire_DESC: "作为军政府新加坡，控制北京、德里、东京和雅加达"
  rise_of_singapore_NAME: "新加坡崛起"
@@ -172,3 +170,5 @@
  usa_novel_campaigner_DESC: "从政治圈的破烂中，一颗新星升起"
  GER_capture_poland_again_NAME: "啊，又来了..."
  GER_capture_poland_again_DESC: "在喜爱的皮耶罗吉和科特莱特度过了一个超长的假期后，我们要搬回去了……再一次……"
+ take_back_eritrea_NAME: "收回厄立特里亚"
+ take_back_eritrea_DESC: "夺回我们分离的厄立特里亚。"
