--- a/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
@@ -74,7 +74,7 @@
  vilayat_e_faqih_extremist_civil_war: "[Vilayat_e_Faqih_L] ([?party_pop_array^9|%0])发动政变"
  vilayat_e_faqih_extremist_civil_war_desc: "受1979年伊朗伊斯兰革命的启发，在抵抗轴心力量的思想支持下，据说[Vilayat_e_Faqih_L]已经准备好了推翻政府，即使意味着它们中的大部分人「饱饮烈士的血液」。他们组织严密，具有强大的意识形态和宗教基础，力求建立一个“伊斯兰法学政府”，作为抵御犹太复国主义和西方影响的堡垒。\n\n效果：\n§H发动公民革命：50%的军事力量§!\n\n§R触发这个会让你掌控起义§!"
  vilayat_e_faqih_20_tt: "[Vilayat_e_Faqih_L] ([?party_pop_array^9|%1]) > 20%支持率"
- promote_outlook_decision_category: "新兴主义"
+ promote_outlook_decision_category: "提升意向"
  promote_outlook_decision_category_desc: "我们可以选择支持国内的某些派系。"
  promote_outlook_decision_support_pro_western_parties: "宣传§Y亲西方主义§!"
  promote_outlook_decision_support_pro_western_parties_desc: "利用信息战，我们可以影响公众对世界局势的看法。然而，任何此类活动都只会在有限的时间内有效，因为人们会逐渐失去兴趣。\n\n§Y宣传活动花费§!修正：[?ROOT.modifier@propaganda_campaign_cost_modifier|-2%]\n§Y亲西方宣传活动花费§!修正：[?ROOT.modifier@western_outlook_campaign_cost_modifier|-2%]"
