--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -111,8 +111,8 @@
  EU_voting_mission_focus_EU303_QMV_result_desc: "成员国对欧洲防务基金提案进行了投票表决，是时候公布结果了。"
  EU_voting_mission_focus_EU304_QMV_result: "欧洲安全理事会投票结果"
  EU_voting_mission_focus_EU304_QMV_result_desc: "成员国对欧洲安全理事会提案进行了投票表决，是时候公布结果了。"
- EU_voting_mission_focus_EU305_QMV_result: "欧盟军队投票结果"
- EU_voting_mission_focus_EU305_QMV_result_desc: "成员国对欧盟军队提案进行了投票表决，是时候公布结果了。"
+ EU_voting_mission_focus_EU305_QMV_result: "欧盟陆军投票结果"
+ EU_voting_mission_focus_EU305_QMV_result_desc: "成员国对欧盟陆军提案进行了投票表决，是时候公布结果了。"
  EU_voting_mission_focus_EU306_QMV_result: "欧盟海军投票结果"
  EU_voting_mission_focus_EU306_QMV_result_desc: "成员国对欧盟海军提案进行了投票表决，是时候公布结果了。"
  EU_voting_mission_focus_EU307_QMV_result: "联合国安理会欧盟常任理事国投票结果"
@@ -366,7 +366,7 @@
  European_Security_Council: "欧洲安全理事会"
  European_Security_Council_desc: "§Y欧洲安全理事会§!是一个安全理事会，旨在帮助欧盟在欧盟快速有效参与的任何事件中进行战略思考和行动。"
  EUU_euroarmy_sc: "欧洲陆军秘书长"
- EUU_euroarmy_sc_desc: "§Y欧盟军队秘书长§!是欧盟欧洲军队的负责人。他们负责欧盟军队的协调，欧盟军队是欧盟成员国的联合和共同武装部队。"
+ EUU_euroarmy_sc_desc: "§Y欧盟陆军秘书长§!是欧盟陆军的负责人。他们负责欧盟陆军的协调，欧盟陆军是欧盟成员国的联合和共同武装部队。"
  EUU_euronavy_sc: "欧盟海军秘书长"
  EUU_euronavy_sc_desc: "§Y欧盟海军秘书长§!是欧盟欧洲海军的负责人。他们负责欧盟海军的协调，欧盟海军是欧盟联合和共同的海军力量。"
  EUU_cfr_eu: "欧盟基本权利宪章"
@@ -430,8 +430,8 @@
  EU_news.8.t: "欧盟边防局局长"
  EU_news.8.d: "[FROM.GetNameWithFlag]将在未来5年担任欧盟边防局局长"
  EU_news.8.a: "我们期待着良好的合作！"
- EU_news.9.t: "欧盟军队秘书长"
- EU_news.9.d: "[FROM.GetNameWithFlag]将在未来5年担任欧盟军队秘书长。"
+ EU_news.9.t: "欧盟陆军秘书长"
+ EU_news.9.d: "[FROM.GetNameWithFlag]将在未来5年担任欧盟陆军秘书长。"
  EU_news.9.a: "我们期待着良好的合作！"
  EU_news.10.t: "欧盟海军秘书长"
  EU_news.10.d: "[FROM.GetNameWithFlag]将在未来5年担任欧盟海军秘书长。"
@@ -525,7 +525,7 @@
  EU_EuroNavy_take_control: "控制欧洲海军"
  EU_EuroNavy_take_control_desc: "随着多国舰队和特遣部队在21世纪变得越来越普遍和重要，§C[EUU.GetFlag]欧洲联盟§!的成员国决定整合他们的部队，将他们的军舰转移到一个统一的欧洲海军司令部，称为§Y欧盟海军§!。"
  EU_EuroArmy_take_control: "控制欧洲陆军"
- EU_EuroArmy_take_control_desc: "§C[EUU.GetFlag]欧洲联盟§!的成员国决定征召称为§Y欧盟军队§!的共同武装力量。"
+ EU_EuroArmy_take_control_desc: "§C[EUU.GetFlag]欧洲联盟§!的成员国决定征召称为§Y欧盟陆军§!的共同武装力量。"
  EU_create_EDU: "成立欧洲防务联盟"
  EU_create_EDU_desc: "为了获得必要的战略自主权，以捍卫其集体利益，应对外部冲突和危机，并在我们的邻国实现安全。成员国已决定组建§Y欧洲防务联盟§!作为军事联盟，集体离开§Y北约组织§!"
  EU_military_exercise: "在[FROM.GetAdjective]边境进行军事演习"
@@ -818,7 +818,7 @@
  tooltip_EU_parliament_focus_EU302_approve: "§Y永久合作架构§!获得§G欧洲议会§!批准"
  tooltip_EU_parliament_focus_EU303_approve: "§Y欧洲防务基金§!获得§G欧洲议会§!批准"
  tooltip_EU_parliament_focus_EU304_approve: "§Y欧洲安全理事会§!获得§G欧洲议会§!批准"
- tooltip_EU_parliament_focus_EU305_approve: "§Y欧盟军队§!获得§G欧洲议会§!批准"
+ tooltip_EU_parliament_focus_EU305_approve: "§Y欧盟陆军§!获得§G欧洲议会§!批准"
  tooltip_EU_parliament_focus_EU306_approve: "§Y欧盟海军§!获得§G欧洲议会§!批准"
  tooltip_EU_parliament_focus_EU307_approve: "§Y联合国安理会欧盟常任理事国§!获得§G欧洲议会§!批准"
  tooltip_EU_parliament_focus_EU308_approve: "§Y欧盟核力量§!获得§G欧洲议会§!批准"
@@ -2785,7 +2785,7 @@
  EU_ministry_of_economy_and_finance_tt: "§Y欧洲经济和财政部长§!领导欧洲经济政府，因此拥有财政联盟赋予的权力。该部长负责监督税务机关、成员国最低工资以及其他经济和财政决策。\n\n§Y职位福利：§!\n\n担任该职务将允许持有人始终将预算草案列入欧洲议会议程，绕过所有影响力要求。\n\n[!eu_minister_economy_finance_back_click]\n"
  EU_ministry_of_economy_and_finance_idea_tt: "在§C欧盟成员国§!的投资中改变$investment_cost_modifier$与$investment_duration_modifier$§G5%§!。\n"
  EU_frontex_director_tt: "§Y欧盟边防局局长§!主管欧洲边境和海岸警卫队机构。边防局的目的是在当地支持欧盟成员国保护欧洲外部边界的努力。它还对申根区实施边境管制，以协助自由、安全和司法领域。\n\n§Y职位福利：§!\n\n担任该职位将允许其持有者在任期内暂时控制欧盟边防局部队。\n\n[!eu_frontex_director_back_click]\n"
- EU_sec_general_euro_army_tt: "§Y欧洲陆军秘书长§!是欧盟欧洲军队的负责人。他们负责欧盟军队的协调，欧盟军队是欧盟成员国的联合和共同武装部队。\n\n§Y职位福利：§!\n\n担任这一职位将允许其持有者在任期内暂时控制欧盟陆军。\n[!eu_sec_general_euro_army_back_click]\n"
+ EU_sec_general_euro_army_tt: "§Y欧洲陆军秘书长§!是欧盟欧洲军队的负责人。他们负责欧盟陆军的协调，欧盟陆军是欧盟成员国的联合和共同武装部队。\n\n§Y职位福利：§!\n\n担任这一职位将允许其持有者在任期内暂时控制欧盟陆军。\n[!eu_sec_general_euro_army_back_click]\n"
  EU_sec_general_euro_navy_tt: "§Y欧盟海军秘书长§!是欧盟欧洲海军的负责人。他们负责欧盟海军的协调，欧盟海军是欧盟联合和共同的海军力量。\n\n§Y职位福利：§!\n\n担任这一职位将允许持有人控制成员国海军并将其统一为一支欧盟舰队。\n[!eu_sec_general_euro_navy_back_click]\n"
  EU_ambassador_to_un_tt: "§Y欧盟驻联合国大使§!在联合国代表欧盟，与所有欧盟成员国的外交使团协调工作。\n\n§Y职位福利：§!\n担任这一职务将授予其所在国家联合国安理会国家精神常任理事国资格。\n\n[!eu_ambassador_to_un_back_click]\n"
  EU_president_of_the_eurofederation_tt: "§Y欧洲联邦主席§! 是正式选举产生的欧洲联盟领导人。欧洲联邦是欧盟最后的联邦化选择之一，因此这使其成为一个非常强大的地位。\n\n§Y职位福利：§!\n\n[!eu_pres_federation_back_click]\n"
@@ -2897,7 +2897,7 @@
  EU_show_available_302_loc_key: "永久性结构合作"
  EU_show_available_303_loc_key: "欧洲防务基金"
  EU_show_available_304_loc_key: "欧洲安全理事会"
- EU_show_available_305_loc_key: "欧盟军"
+ EU_show_available_305_loc_key: "欧盟陆军"
  EU_show_available_306_loc_key: "欧盟海军"
  EU_show_available_307_loc_key: "联合国安理会欧盟常任理事国"
  EU_show_available_308_loc_key: "欧盟核力量"
@@ -2944,7 +2944,7 @@
  EU_show_available_desc_302_loc_key: "§R该拟议法律是欧盟军事法。§!\n因此，永久合作架构允许有意愿且有能力的成员国共同规划、开发和投资共享能力项目，并增强其武装部队的战备状态和贡献。其目的是共同开发一个连贯的全谱部队一揽子计划，并为成员国提供执行国家和跨国任务和行动的能力。"
  EU_show_available_desc_303_loc_key: "§R该拟议法律是欧盟军事法。§!\n欧洲防务基金将为欧洲的战略自主、保护和保卫其公民做出重要贡献。它将促进企业之间以及欧盟国家之间的国防合作，以促进创新并开发最先进的国防技术和产品。该基金将协调、补充和扩大国家国防投资。"
  EU_show_available_desc_304_loc_key: "§R该拟议法律是欧盟军事法。§!\n欧洲安全理事会将使欧盟为国际政治决策做好更好的准备。如果欧盟不能更快地采取和实施一致的决定，其执行欧盟规则和加强多边格式的能力将被削弱。因此，欧盟的外交、财政和军事资源应该得到更有效的政府间合作形式的补充。"
- EU_show_available_desc_305_loc_key: "§Z该拟议法律是欧盟行政法。§!\n为了加强§C[EUU.GetFlag]欧盟的军事能力§!成员国可以组建共同武装部队。这些部队将被称为§Y欧盟军队§!"
+ EU_show_available_desc_305_loc_key: "§Z该拟议法律是欧盟行政法。§!\n为了加强§C[EUU.GetFlag]欧盟的军事能力§!成员国可以组建共同武装部队。这些部队将被称为§Y欧盟陆军§!"
  EU_show_available_desc_306_loc_key: "§Z该拟议法律是欧盟行政法。§!\n随着多国舰队和特遣部队在21世纪变得更加普遍和重要，§C[EUU.GetFlag]欧盟§!成员国 可以联合他们的部队并将他们的军舰转移到一个统一的欧洲海军司令部，称为§Y欧盟海军§!。"
  EU_show_available_desc_307_loc_key: "§Z该拟议法律是欧盟行政法。§!\n成员国决定欧盟成为联合国安理会常任理事国。这是通过改革联合国安理会或将已成为联合国安理会成员的成员国席位转移给欧盟来实现的。"
  EU_show_available_desc_308_loc_key: "§C该拟议法律是欧盟一般法。§!\n成为核国家将增强欧盟的政治权力和欧盟在世界上的影响力。联盟将通过转让和分享其成员国的核武器或开发自己的核弹头来获得核武器。"
@@ -3033,7 +3033,7 @@
  euro_min_fin_eco_tt: "要求欧盟财政经济部长获得欧盟理事会的通过"
  euro_constitution_tt: "要求欧洲公约获得欧盟理事会的通过"
  euro_con_pass_tt: "要求欧洲宪法获得欧盟理事会的通过"
- euro_army_tt: "要求欧盟军获得欧盟理事会的通过"
+ euro_army_tt: "要求欧盟陆军获得欧盟理事会的通过"
  euro_navy_tt: "要求欧盟海军获得欧盟理事会的通过"
  euro_asylum_agency_tt: "要求欧洲难民安置机构获得欧盟理事会的通过"
  federalized_eu_tt: "要求欧盟联邦化已获得欧盟理事会的通过"
