--- a/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
@@ -3001,7 +3001,7 @@
  SOV_east_german_military_discontent_idea_desc: "由于上世纪90年代德国的统一，东德军官的所有军衔都被取消。这使得东德军官的不满情绪更加强烈。"
  Sov_warsaw_pact.10.t: "德国东德情结的兴起"
  Sov_warsaw_pact.10.d: "最近，一个名为“东德情结”的运动在东德特别活跃。虽然它以前就存在，但这次它特别强烈。国际专家对德国的局势非常担忧，并认为这是华沙条约外国情报机构秘密操纵的直接后果。"
- Sov_warsaw_pact.10.a: "有意思。。。"
+ Sov_warsaw_pact.10.a: "有意思…"
  Sov_warsaw_pact.11.t: "德国东部的奇怪活动"
  Sov_warsaw_pact.11.d: "最近，我们在东德发现了越来越频繁的地下共产主义活动的痕迹。我们的情报部门发现，军方开始破坏服务，科学家们也放慢了我们的科学进度。我们已经确定，这一切都是苏联的外部支持造成的。我们的情报部门将从政府那里获得额外的资金，以对付这一祸害。"
  Sov_warsaw_pact.11.a: "我们需要检查我们的干部是否有合作者"
@@ -3507,10 +3507,10 @@
  sov_oligarchs.2.a: "欢迎回家！"
  sov_oligarchs.3.t: "别列佐夫斯基重返俄罗斯！"
  sov_oligarchs.3.d: "俄罗斯最著名、最富有的寡头鲍里斯·别列佐夫斯基重返俄罗斯！"
- sov_oligarchs.3.a: "同意！"
+ sov_oligarchs.3.a: "就像90年代一样！"
  sov_oligarchs.4.t: "七银行家集团在俄罗斯掌权"
- sov_oligarchs.4.d: "俄罗斯最具影响力的寡头集团暂停了该委员会其他成员的职务。"
- sov_oligarchs.4.a: "同意。"
+ sov_oligarchs.4.d: "临时政府内部的内乱导致七位以前非常强大的叶利钦寡头能够消灭所有竞争对手并夺取权力。现在，在七大银行寡头内部，正在决定如何组建公共当局以及谁将接任领导职务。然而，最重要的问题是谁将担任总统？"
+ sov_oligarchs.4.a: "直接控制议会！"
  SOV_russian_oligarchs_modifier: "寡头之国"
  SOV_russian_oligarchs_tt_intro: "§Y$SOV_russian_oligarchs_modifier$§!追加效果："
  SOV_revive_oligarch_influence_tt: "$SOV_russian_oligarchs_tt_intro$\n$corruption_cost_factor$: §R+50.0%§!\n$neutrality_drift$: §G+0.05§!\n$MODIFIER_POLITICAL_POWER_GAIN$: §G+0.05§!\n\n"
@@ -4545,3 +4545,6 @@
  SOV_reunification_minus_10: "§R这将使我们的统一进度减少10§!"
  start_talks_with_esb: "开始与[ESB.GetNamewithFlag]谈判"
  free_esb: "探讨释放[ESB.GetNamewithFlag]"
+ sov_oligarchs.4.b: "我们将任命一位名义上的总统。"
+ sov_oligarchs.4.c: "鲍里斯·别列佐夫斯基将成为总统。"
+ sov_oligarchs.4.e: "米哈伊尔·霍多尔科夫斯基将成为总统。"
