--- a/localisation/simp_chinese/MD_politics_content_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_politics_content_l_simp_chinese.yml
@@ -197,18 +197,18 @@
  red_adm_spending_TT: "§R我们预期的行政支出是 - [exp_adm_spending_text_TT]\n§!"
  green_adm_spending_TT: "§G我们预期的行政支出是 - [exp_adm_spending_text_TT]\n§!"
  yellow_adm_spending_TT: "§Y我们预期的行政支出是 - [exp_adm_spending_text_TT]\n§!"
- red_police_spending_TT: "§R我们预期的警力支出是 - [exp_police_spending_text_TT]\n§!"
- green_police_spending_TT: "§G我们预期的警力支出是 - [exp_police_spending_text_TT]\n§!"
- yellow_police_spending_TT: "§Y我们预期的警力支出是 - [exp_police_spending_text_TT]\n§!"
+ red_police_spending_TT: "§R我们预期的警力开支是 - [exp_police_spending_text_TT]\n§!"
+ green_police_spending_TT: "§G我们预期的警力开支是 - [exp_police_spending_text_TT]\n§!"
+ yellow_police_spending_TT: "§Y我们预期的警力开支是 - [exp_police_spending_text_TT]\n§!"
  red_edu_spending_TT: "§R我们预期的教育支出是 - [exp_edu_spending_text_TT]\n§!"
  green_edu_spending_TT: "§G我们预期的教育支出是 - [exp_edu_spending_text_TT]\n§!"
  yellow_edu_spending_TT: "§Y我们预期的教育支出是 - [exp_edu_spending_text_TT]\n§!"
- red_health_spending_TT: "§R我们预期的健保支出是 - [exp_health_spending_text_TT]\n§!"
- green_health_spending_TT: "§G我们预期的健保支出是 - [exp_health_spending_text_TT]\n§!"
- yellow_health_spending_TT: "§Y我们预期的健保支出是 - [exp_health_spending_text_TT]\n§!"
- red_social_spending_TT: "§R我们预期的社会支出是 - [exp_social_spending_text_TT]\n§!"
- green_social_spending_TT: "§G我们预期的社会支出是 - [exp_social_spending_text_TT]\n§!"
- yellow_social_spending_TT: "§Y我们预期的社会支出是 - [exp_social_spending_text_TT]\n§!"
+ red_health_spending_TT: "§R我们预期的健保开支是 - [exp_health_spending_text_TT]\n§!"
+ green_health_spending_TT: "§G我们预期的健保开支是 - [exp_health_spending_text_TT]\n§!"
+ yellow_health_spending_TT: "§Y我们预期的健保开支是 - [exp_health_spending_text_TT]\n§!"
+ red_social_spending_TT: "§R我们预期的社会开支是 - [exp_social_spending_text_TT]\n§!"
+ green_social_spending_TT: "§G我们预期的社会开支是 - [exp_social_spending_text_TT]\n§!"
+ yellow_social_spending_TT: "§Y我们预期的社会开支是 - [exp_social_spending_text_TT]\n§!"
  green_protest_strength_TT: "§G[?THIS.protest_strength]§!"
  red_protest_strength_TT: "§R[?THIS.protest_strength]§!"
  yellow_protest_strength_TT: "§Y[?THIS.protest_strength]§!"
