Added pricing for improvements and more
Too many changes...

Added improvement pricing, military units, and infrastructure opportunities in the national focus.

Paving the way for new effects, new focuses, and additional localization

--- a/localisation/english/MD_focus_GRN_l_english.yml
+++ b/localisation/english/MD_focus_GRN_l_english.yml
@@ -66,7 +66,7 @@
  GRN_Subsidized_Mass_Alcoholism:0 "Alcohol is now used to subdue and sedate the masses. But what is truly the price that we must play for a society in which alcohol is consumed just like water?\nCurrent: [?GRN.alcohol_abuse_var|0-]"
  
  GRN_Sober_Populace:0 "Sober Populace"
- GRN_Sober_Populace_desc:0 "The populace is free from the shackes and misery that alcohol has induced in society. Wounds are starting to heal, but the scars still run deep, and the people will never forget...\nCurrent: [?GRN.alcohol_abuse_var|0-]"
+ GRN_Sober_Populace_desc:0 "The populace is free from the shackes and misery that alcohol has induced upon our society. Wounds are starting to heal, but the scars still run deep, and the families and people who fell victem to their crimes will never forget...\nCurrent: [?GRN.alcohol_abuse_var|0-]"
  
  GRN_High_Unalive:0 "High Self-Harm"
  GRN_High_Unalive_desc:0 "\nCurrent: [?GRN.unalive_var|0-]"
@@ -85,6 +85,10 @@
 
  GRN_not_independance_tt:0 "§RYou won't be able to become independent!§W\n"
  GRN_independance_tt:0 "§GGrants your independence! More of the focus tree will become available to you.§W\n"
+ 
+ ########################
+ ## NATIONAL WELLBEING ##
+ ########################
 
  GRN_national_wellbeing:0 "National Wellbeing"
  GRN_remove_alcohol_abuse_tt:0 "Remove your current idea with §YGreenlandic Alcohol Abuse§!\n"
@@ -109,6 +113,122 @@
  greenland.2.d:0 "According our Ministry for Health and Human Services, the instances of self-harm amongst the populace has changed by [?GRN.modify_unalive|0=-]!"
  greenland.2.a:0 "OK"
  
+ arctic_railway_NAME: "...Because thats the way things happen on the Polar Express!"
+ arctic_railway_DESC: "As Greenland, build 2 railways to link the nation. One from Nuuk to Qaqartoq and one from Tasiilaq to Qaqartoq."
+
+ #######################
+ ## POLITICAL PARTIES ##
+ #######################
+
+ #Western
+ greenland.Western_Autocracy: "£GRN_Western_Autocracy_small Demokraatit"
+ greenland.Western_Autocracy_desc: "Pro-western autocracy refers to a broad spectrum of non-democratic, authoritarian ideologies that are aligned with the geopolitical interests of the Western Hemisphere."
+ greenland.Western_Autocracy_icon: "£GRN_Western_Autocracy_small"
+
+ greenland.conservatism: "£GRN_conservatism_small Atassut"
+ greenland.conservatism_desc: "Conservatism refers to a broad spectrum of moderate right-wing ideologies espousing the importance of traditional culture, unity, and a stable way of life. Conservatives tend to oppose state intervention in social and economic affairs, and often believe less regulation will result in greater social mobility for the populace."
+ greenland.conservatism_icon: "£GRN_conservatism_small"
+
+ greenland.liberalism: "£GRN_liberalism_small Siumut"
+ greenland.liberalism_desc: "Liberalism is a centrist ideology that promotes the rights of the individual and stresses freedom over the expansion of state power. Liberals tend to support progressive social policies within the framework of a free market with free trade with the rest of the world."
+ greenland.liberalism_icon: "£GRN_liberalism_small"
+
+ greenland.socialism: "£GRN_socialism_small Inuit Ataqatigiit"
+ greenland.socialism_desc: "Social democracy refers to a broad spectrum of left-wing ideologies espousing economic and social justice to a greater extent than most branches of liberalism. Social democrats seek to humanize capitalism to curb inequality, oppression, and foster democracy."
+ greenland.socialism_icon: "£GRN_socialism_small"
+
+ #Emerging
+ greenland.Communist-State: "£GRN_Communist_State_small Communists"
+ greenland.Communist-State_desc: "Communism broadly refers to an ideology espousing the end of the capitalist system to create a communal worker’s paradise. In reality, communist nations retain capitalistic economic systems and are often non-democratic in nature."
+ greenland.Communist-State_icon: "£GRN_Communist_State_small"
+
+ greenland.anarchist_communism: "£GRN_anarchist_communism_small Left-Wing Radicals"
+ greenland.anarchist_communism_desc: "Left-wing radicalism is a broad spectrum of far-left ideology that typically espouses the end of capitalism and globalization. While some may support armed resistance, many see themselves as simply ‘more left’ than social democrats and are accepting of liberal democracy."
+ greenland.anarchist_communism_icon: "£GRN_anarchist_communism_small"
+
+ greenland.Conservative: "£GRN_Conservative_small Kattusseqatigiit"
+ greenland.Conservative_desc: "Reactionaries refer to a broad spectrum of far-right ideologies whose aims go further than moderate conservatives. Reactionaries typically believe in an idealized version of the past and seek to restore a nation's former glory through revanchist and irredentist ideology and an aggressive military policy."
+ greenland.Conservative_icon: "£GRN_Conservative_small"
+
+ greenland.Autocracy: "£GRN_Autocracy_small Autocrats"
+ greenland.Autocracy_desc: "Autocracy refers to a broad spectrum of non-democratic, authoritarian political systems where a single ruler or group of privileged elites control all political power."
+ greenland.Autocracy_icon: "£GRN_Autocracy_small"
+
+ #Non-aligned
+ greenland.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Moderate Islamists"
+ greenland.Neutral_Muslim_Brotherhood_icon: "£muslim_brotherhood_small"
+ greenland.Neutral_Muslim_Brotherhood_desc: "Moderate Islamism refers to a broad spectrum of Islamic political movements seeking to establish a democratic state within the confines of Islamic law."
+
+ greenland.Neutral_Autocracy: "£GRN_Neutral_Autocracy_small Non-Aligned Autocrats"
+ greenland.Neutral_Autocracy_icon: "£GRN_Neutral_Autocracy_small"
+ greenland.Neutral_Autocracy_desc: "Autocracy refers to a broad spectrum of non-democratic, authoritarian ideologies where all power is placed in the hands of a single ruler."
+
+ greenland.Neutral_conservatism: "£GRN_Neutral_conservatism_small Conservatives"
+ greenland.Neutral_conservatism_icon: "£GRN_Neutral_conservatism_small"
+ greenland.Neutral_conservatism_desc: "Conservatism refers to a broad spectrum of moderate right-wing ideologies espousing the importance of traditional culture, unity, and a stable way of life. Conservatives tend to oppose state intervention in social and economic affairs, and often believe less regulation will result in greater social mobility for the populace."
+
+ greenland.oligarchism: "£GRN_oligarchism_small Oligarchs"
+ greenland.oligarchism_icon: "£GRN_oligarchism_small"
+ greenland.oligarchism_desc: "Oligarchy refers to a power structure in which control is placed in the hands of a select group of political and economic elites. Oligarchies are typically non-democratic and authoritarian in nature."
+
+ greenland.Neutral_Libertarian: "£GRN_Neutral_Libertarian_small Nunatta Qitornai"
+ greenland.Neutral_Libertarian_icon: "£GRN_Neutral_Libertarian_small"
+ greenland.Neutral_Libertarian_desc: "Libertarianism refers to a broad range of political ideologies and movements espousing liberty as a core principle. Libertarians typically support limited government intervention in all aspects of social, political and economic life to a greater extent than conservatives."
+
+ greenland.Neutral_green: "£GRN_Neutral_green_small Greens"
+ greenland.Neutral_green_icon: "£GRN_Neutral_green_small"
+ greenland.Neutral_green_desc: "Green politics or ecopolitics refer to a broad spectrum of left-wing movements espousing nonviolence, social justice, direct democracy and environmentalism."
+
+ greenland.neutral_Social: "£GRN_neutral_Social_small Naleraq and Partii Inuit"
+ greenland.neutral_Social_icon: "£GRN_neutral_Social_small"
+ greenland.neutral_Social_desc: "Socialist democrat ideology refers to left-wing ideologies espousing economic and social justice. While working within the framework of capitalism, they seek heavy redistribution of wealth to curb inequality. They promote the welfare state and to impose more regulation over private business."
+
+ greenland.Neutral_Communism: "£GRN_Neutral_Communism_small Communists"
+ greenland.Neutral_Communism_icon: "£GRN_Neutral_Communism_small"
+ greenland.Neutral_Communism_desc: "Communism broadly refers to an ideology espousing the end of the capitalist system to create a communal worker’s paradise. In reality, communist nations retain capitalistic economic systems and are often non-democratic in nature."
+
+ #nationalist
+ greenland.Nat_Populism: "£GRN_Nat_Populism_small Right Wing Populists"
+ greenland.Nat_Populism_icon: "£GRN_Nat_Populism_small"
+ greenland.Nat_Populism_desc: "Right-wing populism refers to a specific branch of populist ideology that seeks to empower the people against perceived elites that control society. Right-wing populists typically support anti-globalization, protectionism, nativism, nationalism, and an opposition to immigration."
+
+ greenland.Nat_Fascism: "£GRN_Nat_Fascism_small Fascists"
+ greenland.Nat_Fascism_icon: "£GRN_Nat_Fascism_small"
+ greenland.Nat_Fascism_desc: "Fascism is a form of authoritarian ultra-nationalism espoused in militaristic overtones. Fascism seeks to establish a one-party state headed by a single leader wielding absolute authority, and supports violence and aggressive expansionism to foster national rejuvenation."
+
+ greenland.Nat_Autocracy: "£GRN_Nat_Autocracy_small Armed Forces of Greenland"
+ greenland.Nat_Autocracy_icon: "£GRN_Nat_Autocracy_small"
+ greenland.Nat_Autocracy_desc: "Military juntas refer to governments led by a committee of military leaders. Military juntas are often non-democratic and authoritarian in nature, and can in a very broad sense be considered a form of military dictatorship or stratocracy."
+
+ greenland.Monarchist: "£DEN_Monarchist_small Danish Crown"
+ greenland.Monarchist_icon: "£GRN_Monarchist_small"
+ greenland.Monarchist_desc: "A movement of national self-suppression and advocacy for the reigning of the Danish Crown across it's commonweath realms."
+ 
+ #Western_Autocracy - Demokraatit
+ #conservatism - Atassut
+ #liberalism - Siumut
+ #socialism - Inuit Ataqatigiit
+ #Communist-State
+ #anarchist_communism
+ #Conservative - Kattusseqatigiit
+ #Autocracy
+ #Mod_Vilayat_e_Faqih
+ #Vilayat_e_Faqih
+ #Kingdom
+ #Caliphate
+ #Neutral_Muslim_Brotherhood
+ #Neutral_Autocracy
+ #Neutral_conservatism
+ #oligarchism
+ #Neutral_Libertarian - Nunatta Qitornai
+ #Neutral_green
+ #neutral_Social - Naleraq/Partii Inuit
+ #Neutral_Communism
+ #Nat_Populism
+ #Nat_Fascism
+ #Nat_Autocracy - Armed Forces of Greenland
+ #Monarchist - Danish Crown
+
  ##########
  ## ARMY ##
  ##########
@@ -178,6 +298,9 @@
  
  GRN_Focus_on_Trade:0 "Focus on Trade"
  GRN_Focus_on_Trade_desc:0 "We don't have much use for resources in our country. But other countries might have, so we will focus on exporting our resources to global markets. It would help us generate a stable source of income."
+ 
+ GRN_Building_the_Polar_Express:0 "Building the Polar Express"
+ GRN_Building_the_Polar_Express_desc:0 "Without improvements to national infrastructure, we cannot progress. Creating highways across a barren wasteland for hundreds of miles would be impractical and would seem very inefficient. Instead wes should build a series of both high-speed and conventional railroad lines across the island to haul equipment, cargo, and passengers."
 
  GRN_Expand_Fishieries:0 "Expand the Fishing Industry"
  GRN_Expand_Fishieries_desc:0 "Our economy is largely based upon the fishing industry and we can't industrialize because the nation isnt ready yet as it would be hard on island like this. We should utilise our fishing industry as a way that we can go towards jumpstarting the economy."
@@ -218,10 +341,10 @@
  ###############
 
  GRN_Greenlandic_Politics:0 "Greenlandic Politics"
- GRN_Greenlandic_Politics_desc:0 "The politcs in our country are very similar and tame in nature, with two major coalitions dominating over the Inatsisartut. But the question is, who will eventually win over the hearts and minds of our people?"
+ GRN_Greenlandic_Politics_desc:0 "The politcs in our country are very simple and tame in nature, usually coalitions overlap with the multiple, similar parties in the Inatsisartut and with a set environmentalist priority for all parties. But the question is, who will eventually win over the hearts and minds of our people?"
  
  GRN_Left_Coalition:0 "Coalition of the Near-Left"
- GRN_Left_Coalition_desc:0 "Siumit and Inuit Ataqatigiit are both social democratic parties. Usually they advocate for more autonomous and environmentalist policies."
+ GRN_Left_Coalition_desc:0 "Siumit and Inuit Ataqatigiit are both social democratic parties. Usually they advocate for more autonomous and social wellfare policies."
  
  GRN_Northern_Democratic_Principles:0 "Northern Social Democratic Models"
  GRN_Northern_Democratic_Principles_desc:0 "The scandinavian model of social democracy and other similar movements in the north have been proven succesful to our Scandinavian brothers and our Canadian neighbour, so maybe we should also try to implementing this socio-political system in our country."
@@ -232,9 +355,9 @@
  GRN_Global_Immigrants:0 "More Immigrants"
  GRN_Global_Immigrants_desc:0 "Our population is small, and there are people who are looking for a home in countries like ours. If we invited them to our country, our population would begin to grow."
  
- GRN_Right_Coalition:0 "Alliance of the Near-Rigth"
+ GRN_Right_Coalition:0 "Alliance of the Near-Right"
  GRN_Right_Coalition_desc:0 "Atassut and Demokraatit are both liberal conservative parties. Usually they advocate for more unionist and market reform policies."
- 
+
  GRN_native_recrutment_program:0 "Native Recruitment Program"
  GRN_native_recrutment_program_desc:0 ""
  
@@ -243,6 +366,12 @@
  
  GRN_Nordic_Immigrants:0 "Accept Only Nordic Immigrants"
  GRN_Nordic_Immigrants_desc:0 "Immigrants = bad. The only time that this is not true is if, those immigrating are coming from the heart of the Danish Realm." 
+ 
+ GRN_General_Policies:0 "Collaborative Policies"
+ GRN_General_Policies_desc:0 "We must work together as a nation in order to resolve general problems that we are facing."
+
+ GRN_Dawn_Millennium:0 "Dawn of a New Millennium"
+ GRN_Dawn_Millennium_desc:0 "We must keep on forging ahead now that we have shown to be fully capable of solving any problem in our way"
  
  ###############
  ## DIPLOMACY ##
@@ -263,8 +392,8 @@
  GRN_Russian_Investors:0 "Russian Investors"
  GRN_Russian_Investors_desc:0 "Inviting Russian investors could help expand our economy."
  
- GRN_Russian_Army_Discipline:0 "Russian Army Discipline"
- GRN_Russian_Army_Discipline_desc:0 "Russian army is one of the biggest and most discipline armies in the world, and we could learn from that"
+ GRN_Soviet_Army_Discipline:0 "Russian Army Discipline"
+ GRN_Soviet_Army_Discipline_desc:0 "Russian army is one of the biggest and most discipline armies in the world, and we could learn from that"
  
  GRN_American_Ties:0 "American Ties"
  GRN_American_Ties_desc:0 "America is our partner, and they have helped us many times, we should invest in making them our closer friends"
