Damn it changelog save

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -47,6 +47,8 @@ v1.10.0
   - Fixed Armenian focus about NATO integration
   - Fixed PLZ-05 from historical decisions having incorrect modules
   - Fixed AI designing non-producable PLZ-05
+  - Fixed Polish AI getting stuck while doing focuses
+  - Fixed Polish AI leaving CSTO in Korwin path
 
  Content:
   - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
