Parties ics for Russian brealwaways

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -1434,7 +1434,7 @@
  SOV.liberalism: "£SOV_western_liberal Yabloko"
  SOV.liberalism_icon: "£SOV_western_liberal"
  SOV.liberalism_desc: "Liberal - Rossiyskaya obyedinyonnaya demokraticheskaya partiya \"Yabloko\" (Russian United Democratic Party \"Yabloko\") is a social-liberal party promoting a market economy and democratic values. Yabloko, which mean \"apple\" in Russian, has historical been the premier political force against both Communism and Conservatism in Russia."
- SOV.liberalism_alt: "£SOV_navalnyu Narodnyy Al'yans"
+ SOV.liberalism_alt: "£SOV_navalnyu Narodnyy Alyans"
  SOV.liberalism_alt_icon: "£SOV_navalnyu"
  SOV.liberalism_alt_desc: "Liberal - Narodnyy Al'yans (People's Alliance) is a progressive liberal party created by prominent russian political figure Alexsey Navalny. It's stands for anti-corruption, liberalism and market economy."
  SOV.liberalism_alty: "£SOV_western_social_democrat33 Partiya Progressa"
@@ -3057,6 +3057,41 @@
  CRM.Nat_Populism: "£SOV_nationalist_right_wing_populist LDPR"
  CRM.Nat_Populism_icon: "£SOV_nationalist_right_wing_populist"
 
+### Ural ###
+ #Western
+ URA.conservatism: "£URA_western_conserv Natsional-Demokraticheskiy Alyans"
+ URA.conservatism_icon: "£URA_western_conserv"
+ URA.liberalism: "£URA_western_liberal Budushchee Urala"
+ URA.liberalism_icon: "£URA_western_liberal"
+ URA.socialism: "£URA_western_social Svobodnyy Ural"
+ URA.socialism_icon: "£URA_western_social"
+ #Emerging
+ URA.Communist-State: "£URA_communist-state Trudovoy Front"
+ URA.Communist-State_icon: "£URA_communist-state"
+ URA.anarchist_communism: "£URA_anarchist_communism Levyy Blok"
+ URA.anarchist_communism_icon: "£URA_anarchist_communism"
+ URA.anarchist_communism_desc: ""
+ #Non-Aligned
+ URA.oligarchism: "£URA_oligarchism Sotsialisticheskaya Partiya"
+ URA.oligarchism_icon: "£URA_oligarchism"
+ URA.Neutral_Communism: "£URA_neutral_communism Front Natsionalnogo Spaseniya"
+ URA.Neutral_Communism_icon: "£URA_neutral_communism"
+ URA.Neutral_Libertarian: "£URA_neutral_libertarian Democraticheskaya Party"
+ URA.Neutral_Libertarian_icon: "£URA_neutral_libertarian"
+ URA.neutral_Social: "£URA_neutral_socialism Sotsialisticheskaya Federatsiya"
+ URA.neutral_Social_icon: "£URA_neutral_socialism"
+ URA.Neutral_conservatism: "£URA_neutral_conservative Duhovnoye Naslediye"
+ URA.Neutral_conservatism_icon: "£URA_neutral_conservative"
+ #Nationalist
+ URA.Nat_Fascism: "£URA_nat_fascism Natsional Sotsialisticheskoye Obshestvo"
+ URA.Nat_Fascism_icon: "£URA_nat_fascism"
+ URA.Monarchist: "£URA_monarchism Monarhicheskaya Partiya"
+ URA.Monarchist_icon: "£URA_monarchism"
+ URA.Monarchist_desc: ""
+ URA.Nat_Populism: "£URA_nat_pop Preobrazheniye Urala"
+ URA.Nat_Populism_icon: "£URA_nat_pop"
+ URA.Nat_Autocracy: "£URA_nat_autocracy Self-Defence Forces of Ural"
+ URA.Nat_Autocracy_icon: "£URA_nat_autocracy"
  ### Taiwan ###
  ###pro-western
  TAI.conservatism: "£TAI_conservatism Kuomintang (KMT)" #Should be in neutral (perhaps conservative but don't know where to move PFP,)
