--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -682,8 +682,8 @@
  CUB_allow_multi_party_system_desc: "What kind of democracy is there without freedom of speech?"
  CUB_the_new_constitution: "The New Democratic Constitution"
  CUB_the_new_constitution_desc: "The new Constitution must protect the rights of citizens and the newly established Cuban democracy."
- CUB_Guantanamo_que: "End Guantanamo Question"
- CUB_Guantanamo_que_desc: "We need to end territorial questions between Cuba and USA, we need to talk anout Guantanamo."
+ CUB_guantanamo_que: "End Guantanamo Question"
+ CUB_guantanamo_que_desc: "We need to end territorial questions between Cuba and USA, we need to talk anout Guantanamo."
  CUB_demilitarize_society: "Demilitarization of Society"
  CUB_demilitarize_society_desc: "Militarism in our country is unfortunately high, we need to demilitarize our society in order to achieve true democracy and freedom."
  CUB_deals_with_rare_communists: "Deal with the Communists"
