--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2833,8 +2833,7 @@
  CHI_nationalist: "China"
  CHI_nationalist_DEF: "China"
  CHI_nationalist_ADJ: "Chinese"
- CHI_AUTH_S: "China" 
- #Will use short name on map and long in diplo events
+ CHI_AUTH_S: "People's Republic of China" 
  CHI_AUTH_S_DEF: "the People's Republic of China"
  CHI_AUTH_S_ADJ: "Chinese"
 
